Added test grammar

--- a/lexical/config.json
+++ b/lexical/config.json
@@ -18,6 +18,7 @@
     "reserved": {
         "T_WORD": {
             "hello": "T_HELLO",
+            "bye": "T_BYE",
             "easycc": "T_EASYCC"
         }
     }
