Enhanced CMakeLists.txt

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,23 +3,29 @@ project(easycc)
 set(CMAKE_VERBOSE_MAKEFILE ON)
 set(PROJECT_TEST "easycctests")
 
-##### RESOURCES #####
+# Copy resources
 file(GLOB resources_SRC "resources/src/*")
 file(GLOB resources_TEST "resources/test/*")
 file(COPY ${resources_SRC} DESTINATION "${CMAKE_BINARY_DIR}/bin/resources/src/")
 file(COPY ${resources_TEST} DESTINATION "${CMAKE_BINARY_DIR}/bin/resources/test/")
 
-#### OUTPUT ####
+# Configure directory of output file
 set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/lib)
 set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/lib)
 set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin)
 
-##### APP #####
-ADD_DEFINITIONS(-DBOOST_LOG_DYN_LINK)
+# Include rapidjson header files (e.g. same as -I flag)
+include_directories(rapidjson/include)
+
+# Add boost
+add_definitions(-DBOOST_LOG_DYN_LINK)
 find_package(Boost 1.63.0 COMPONENTS log log_setup thread date_time filesystem system REQUIRED)
 link_libraries(${CMAKE_THREAD_LIBS_INIT} ${Boost_LIBRARIES} ${Boost_LIBRARIES})
+
+# Add -std=c++11 flag
 set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")
 
+# Store source files in a variables
 set(SOURCE_FILES
         lexical/graph/Graph.cpp
         lexical/graph/Graph.h
@@ -27,41 +33,6 @@ set(SOURCE_FILES
         lexical/graph/State.h
         lexical/Lexical.cpp
         lexical/Lexical.h
-        rapidjson/error/en.h
-        rapidjson/error/error.h
-        rapidjson/internal/biginteger.h
-        rapidjson/internal/diyfp.h
-        rapidjson/internal/dtoa.h
-        rapidjson/internal/ieee754.h
-        rapidjson/internal/itoa.h
-        rapidjson/internal/meta.h
-        rapidjson/internal/pow10.h
-        rapidjson/internal/regex.h
-        rapidjson/internal/stack.h
-        rapidjson/internal/strfunc.h
-        rapidjson/internal/strtod.h
-        rapidjson/internal/swap.h
-        rapidjson/msinttypes/inttypes.h
-        rapidjson/msinttypes/stdint.h
-        rapidjson/allocators.h
-        rapidjson/document.h
-        rapidjson/encodedstream.h
-        rapidjson/encodings.h
-        rapidjson/filereadstream.h
-        rapidjson/filewritestream.h
-        rapidjson/fwd.h
-        rapidjson/istreamwrapper.h
-        rapidjson/memorybuffer.h
-        rapidjson/memorystream.h
-        rapidjson/ostreamwrapper.h
-        rapidjson/pointer.h
-        rapidjson/prettywriter.h
-        rapidjson/rapidjson.h
-        rapidjson/reader.h
-        rapidjson/schema.h
-        rapidjson/stream.h
-        rapidjson/stringbuffer.h
-        rapidjson/writer.h
         lexical/config/LexicalConfig.cpp
         lexical/config/LexicalConfig.h
         lexical/token/LexicalToken.cpp
@@ -79,23 +50,26 @@ set(SOURCE_FILES
         easycc/EasyCC.cpp
         easycc/EasyCC.h)
 
+# Add the primary executable
 add_executable(${PROJECT_NAME} ${SOURCE_FILES} main.cpp)
-target_link_libraries(${PROJECT_NAME} -lpthread)
-target_link_libraries(${PROJECT_NAME}
-        ${Boost_FILESYSTEM_LIBRARY}
-        ${Boost_SYSTEM_LIBRARY}
-        )
 
-##### TEST ######
-ADD_SUBDIRECTORY (gtest-1.6.0)
+# Link libraries to the executbale
+target_link_libraries(${PROJECT_NAME} -lpthread)
+target_link_libraries(${PROJECT_NAME} ${Boost_FILESYSTEM_LIBRARY} ${Boost_SYSTEM_LIBRARY})
+
+# Add gtest CMakeLists.txt to build it automatically
+add_subdirectory(gtest-1.6.0)
 enable_testing()
+
+# Add gtest header files (e.g. same as -I flag)
 include_directories(${gtest_SOURCE_DIR}/include ${gtest_SOURCE_DIR})
 
-file(GLOB_RECURSE easycctests_SRC
-        "test/*.h"
-        "test/*.cpp"
-        )
+# Add easycc test files to a variable
+file(GLOB_RECURSE easycctests_SRC "test/*.h" "test/*.cpp")
 
-add_executable(easycctests ${SOURCE_FILES} ${easycctests_SRC})
-target_link_libraries(easycctests gtest gtest_main)
-add_test(easycctests easycctests)
+# Add test executable
+add_executable(${PROJECT_TEST} ${SOURCE_FILES} ${easycctests_SRC})
+
+# Link libraries to the executable
+target_link_libraries(${PROJECT_TEST} gtest gtest_main)
+add_test(${PROJECT_TEST} ${PROJECT_TEST})
