Created include and src dirs

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,6 +3,7 @@ project(easycc)
 set(CMAKE_VERBOSE_MAKEFILE ON)
 set(PROJECT_TEST "easycctests")
 set(PROJECT_LIB easyccls)
+set(PROJECT_EXEC "${PROJECT_NAME}")
 
 # Copy resources
 file(GLOB resources_SRC "resources/src/*")
@@ -15,7 +16,13 @@ set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/lib)
 set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/lib)
 set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin)
 
-# Include rapidjson header files (e.g. same as -I flag)
+# Include easycc header files (e.g. same as -I flag)
+include_directories(include)
+
+# Store cpp files in a variable
+file(GLOB_RECURSE PROJECT_SOURCE_FILES "src/*/*.cpp")
+
+# Include rapidjson header files
 include_directories(rapidjson/include)
 
 # Add boost
@@ -26,53 +33,28 @@ link_libraries(${CMAKE_THREAD_LIBS_INIT} ${Boost_LIBRARIES} ${Boost_LIBRARIES})
 # Add -std=c++11 flag
 set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")
 
-# Store source files in a variables
-set(SOURCE_FILES
-        lexical/graph/Graph.cpp
-        lexical/graph/Graph.h
-        lexical/graph/State.cpp
-        lexical/graph/State.h
-        lexical/Lexical.cpp
-        lexical/Lexical.h
-        lexical/config/LexicalConfig.cpp
-        lexical/config/LexicalConfig.h
-        lexical/token/LexicalToken.cpp
-        lexical/token/LexicalToken.h
-        lexical/config/LexicalMessages.cpp
-        lexical/config/LexicalMessages.h
-        syntax/grammar/Grammar.cpp
-        syntax/grammar/Grammar.h
-        syntax/Syntax.cpp
-        syntax/Syntax.h
-        syntax/config/SyntaxMessages.cpp
-        syntax/config/SyntaxMessages.h
-        syntax/config/SyntaxConfig.cpp
-        syntax/config/SyntaxConfig.h
-        easycc/EasyCC.cpp
-        easycc/EasyCC.h)
-
 # Add the primary executable
-add_executable(${PROJECT_NAME} ${SOURCE_FILES} main.cpp)
+add_executable(${PROJECT_EXEC} ${PROJECT_SOURCE_FILES} main.cpp)
 
-# Add library
-add_library(${PROJECT_LIB} ${SOURCE_FILES})
+# Link libraries to the primary executbale
+target_link_libraries(${PROJECT_EXEC} -lpthread)
+target_link_libraries(${PROJECT_EXEC} ${Boost_FILESYSTEM_LIBRARY} ${Boost_SYSTEM_LIBRARY})
 
-# Link libraries to the executbale
-target_link_libraries(${PROJECT_NAME} -lpthread)
-target_link_libraries(${PROJECT_NAME} ${Boost_FILESYSTEM_LIBRARY} ${Boost_SYSTEM_LIBRARY})
+# Add library target
+add_library(${PROJECT_LIB} ${PROJECT_SOURCE_FILES})
 
 # Add gtest CMakeLists.txt to build it automatically
 add_subdirectory(googletest)
 enable_testing()
 
 # Add gtest header files (e.g. same as -I flag)
-include_directories(${gtest_SOURCE_DIR}/include)
+include_directories(googletest/include)
 
-# Add easycc test files to a variable
+# Store easycc test files to a variable
 file(GLOB_RECURSE easycctests_SRC "test/*.h" "test/*.cpp")
 
 # Add test executable
-add_executable(${PROJECT_TEST} ${SOURCE_FILES} ${easycctests_SRC})
+add_executable(${PROJECT_TEST} ${PROJECT_SOURCE_FILES} ${easycctests_SRC})
 
 # Link libraries to the executable
 target_link_libraries(${PROJECT_TEST} gtest gtest_main)
