Added examples dir

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,7 +3,7 @@ project(easycc)
 set(CMAKE_VERBOSE_MAKEFILE ON)
 set(PROJECT_TEST "easycctests")
 set(PROJECT_LIB easyccls)
-set(PROJECT_EXEC "${PROJECT_NAME}")
+set(PROJECT_EXEC_1 "calculator")
 
 # Copy resources
 file(GLOB resources_SRC "resources/src/*")
@@ -19,7 +19,7 @@ set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin)
 # Include easycc header files (e.g. same as -I flag)
 include_directories(include)
 
-# Store cpp files in a variable
+# Store src cpp files in a variable
 file(GLOB_RECURSE PROJECT_SOURCE_FILES "src/*/*.cpp")
 
 # Include rapidjson header files
@@ -33,15 +33,14 @@ link_libraries(${CMAKE_THREAD_LIBS_INIT} ${Boost_LIBRARIES} ${Boost_LIBRARIES})
 # Add -std=c++11 flag
 set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")
 
-# Add the primary executable
-add_executable(${PROJECT_EXEC} ${PROJECT_SOURCE_FILES} main.cpp)
+# Link libraries to all targets
+link_libraries(-lpthread)
+link_libraries(${Boost_FILESYSTEM_LIBRARY} ${Boost_SYSTEM_LIBRARY})
 
-# Link libraries to the primary executbale
-target_link_libraries(${PROJECT_EXEC} -lpthread)
-target_link_libraries(${PROJECT_EXEC} ${Boost_FILESYSTEM_LIBRARY} ${Boost_SYSTEM_LIBRARY})
-
+# [TARGET 1]
 # Add library target
 add_library(${PROJECT_LIB} ${PROJECT_SOURCE_FILES})
+# [/TARGET 1]
 
 # Add gtest CMakeLists.txt to build it automatically
 add_subdirectory(googletest)
@@ -53,9 +52,16 @@ include_directories(googletest/include)
 # Store easycc test files to a variable
 file(GLOB_RECURSE easycctests_SRC "test/*.h" "test/*.cpp")
 
+# [TARGET 2]
 # Add test executable
 add_executable(${PROJECT_TEST} ${PROJECT_SOURCE_FILES} ${easycctests_SRC})
 
-# Link libraries to the executable
+# Link libraries to the test executable only
 target_link_libraries(${PROJECT_TEST} gtest gtest_main)
 add_test(${PROJECT_TEST} ${PROJECT_TEST})
+# [/TARGET 2]
+
+# [TARGET 3]
+# Add example executable
+add_executable(${PROJECT_EXEC_1} ${PROJECT_SOURCE_FILES} examples/calculator/calculator.cpp)
+# [/TARGET 3]
