Fixed bug in FF template

--- a/tools/first_follow/GrammarFF.h.template
+++ b/tools/first_follow/GrammarFF.h.template
@@ -7,9 +7,10 @@
 #include <map>
 #include <set>
 #include <memory>
+#include <easycc/Grammar.h>
 
 namespace ecc{
-    class GrammarFF {
+    class GrammarFF : public Grammar {
     public:
         GrammarFF() {
 
