Renamed first follow tool

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -49,7 +49,7 @@ add_library(${PROJECT_DEV_LIB} ${PROJECT_SOURCE_FILES} src/easycc/EasyCCDev.cpp)
 add_library(${PROJECT_PRO_LIB} ${PROJECT_SOURCE_FILES} src/easycc/EasyCCPro.cpp)
 
 # Add subdirectory CMakeLists.txt
-add_subdirectory(tools/first_follow)
+add_subdirectory(tools/convert_grammar)
 add_subdirectory(googletest)
 add_subdirectory(test)
 add_subdirectory(examples/calculator-dev)
@@ -59,9 +59,9 @@ add_subdirectory(examples/calculator-pro)
 add_custom_command(
         TARGET ${PROJECT_PRO_LIB} PRE_BUILD
         COMMAND ${CMAKE_COMMAND} -E make_directory ${PROJECT_SOURCE_DIR}/bin/include/easycc/generated
-        COMMAND ${TOOL_FIRST_FOLLOW}
-        ARGS -t ${PROJECT_SOURCE_DIR}/tools/include/easycc/generated/GrammarFF.h
-        -o ${PROJECT_SOURCE_DIR}/bin/include/easycc/generated/GrammarFF.h
+        COMMAND ${TOOL_CONVERT_GRAMMAR}
+        ARGS -t ${PROJECT_SOURCE_DIR}/tools/cond_include/easycc/generated/StaticGrammar.h
+        -o ${PROJECT_SOURCE_DIR}/bin/include/easycc/generated/StaticGrammar.h
         ${PROJECT_SOURCE_DIR}/resources/src/calculator/syntax_grammar.txt
         DEPENDS ${TOOL_FIRST_FOLLOW}
         VERBATIM)
